# sim-ayto

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.action  Makefile.conf  README.md  REUSE.toml  dot_colors.lua  generate_png.py  index.md  main.lua  perm.lua  requirements.txt  ressources.url  restore-ts.sh  restore-ts_exec.sh  restore-ts_save.sh  s03.out  sim.lua  sim.py  sim.spec.lua  sim_perm.lua  stats.tex  statsInfo.tex  statsMB.tex  statsMN.tex  stats_de.html  stats_us.html  theme.yml
rust/: .gitignore  Cargo.toml  Makefile  deny.toml
rust/src/: 00_refactor.md  comparison.rs  constraint.rs  dump_mode.rs  game.rs  graph.rs  ignore_ops.rs  iterstate.rs  lib.rs  main.rs  matching_repr.rs  progressbar.rs  ruleset.rs  ruleset_data.rs  tree.rs  utils.rs
rust/src/comparison/: data.rs  information.rs  lights.rs  plotly.rs  presentation.rs  ruleset.rs  summary.rs  theme.rs  utils.rs
rust/src/constraint/: check_type.rs  compare.rs  eval.rs  eval_compute.rs  eval_predicates.rs  eval_report.rs  eval_types.rs  evaluate.rs  evaluate_predicates.rs  parse.rs  parse_helpers.rs  parse_utils.rs  report.rs  report_hdr.rs  report_predicates.rs  report_summary.rs  simulate.rs  utils.rs
rust/src/game/: cache.rs  cache_report.rs  compare.rs  dump_mode.rs  eval.rs  eval_utils.rs  md_output.rs  output.rs  parse.rs  parse_utils.rs  query_matchings.rs  query_pairs.rs  report_body.rs  report_summary.rs  report_trail.rs  report_utils.rs  sim.rs
rust/src/matching_repr/: bitset.rs  conversions.rs  iter.rs
rust/src/ruleset/: generators.rs  (+3 more)
rust/templates/: page_de.md  page_en.md
(+609 files in other folders)
