# cargo-features = ["profile-rustflags"]

[package]
name = "ayto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
# rustflags = ["-C", "target-cpu=skylake"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
permutator = "0.4"
comfy-table = "7.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
