# cargo-features = ["profile-rustflags"]

[package]
name = "ayto"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
# license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
# rustflags = ["-C", "target-cpu=skylake"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
permutator = "0.4"
comfy-table = "7.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
csv = "1.3.0"
walkdir = "2.5.0"
plotly = "0.9.0"
catppuccin = "2.4.0"
serde_json = "1.0.145"
rust_decimal = { version = "1.40.0", features = ["macros", "serde-float"] }
num-format = "0.4.4"
rand = "0.10.0"
rayon = "1.11.0"
chrono = "0.4.43"
